; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_config.c_search_groups.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_config.c_search_groups.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.search_groups_baton = type { i32, i32, i32 }

@.str = private unnamed_addr constant [2 x i8] c",\00", align 1
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*, i32*)* @search_groups to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @search_groups(i8* %0, i8* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.search_groups_baton*, align 8
  %11 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = bitcast i8* %12 to %struct.search_groups_baton*
  store %struct.search_groups_baton* %13, %struct.search_groups_baton** %10, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i32, i32* @TRUE, align 4
  %16 = load i32*, i32** %9, align 8
  %17 = call i32* @svn_cstring_split(i8* %14, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %15, i32* %16)
  store i32* %17, i32** %11, align 8
  %18 = load %struct.search_groups_baton*, %struct.search_groups_baton** %10, align 8
  %19 = getelementptr inbounds %struct.search_groups_baton, %struct.search_groups_baton* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %11, align 8
  %22 = call i64 @svn_cstring_match_glob_list(i32 %20, i32* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %33

24:                                               ; preds = %4
  %25 = load %struct.search_groups_baton*, %struct.search_groups_baton** %10, align 8
  %26 = getelementptr inbounds %struct.search_groups_baton, %struct.search_groups_baton* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @apr_pstrdup(i32 %27, i8* %28)
  %30 = load %struct.search_groups_baton*, %struct.search_groups_baton** %10, align 8
  %31 = getelementptr inbounds %struct.search_groups_baton, %struct.search_groups_baton* %30, i32 0, i32 1
  store i32 %29, i32* %31, align 4
  %32 = load i32, i32* @FALSE, align 4
  store i32 %32, i32* %5, align 4
  br label %35

33:                                               ; preds = %4
  %34 = load i32, i32* @TRUE, align 4
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %33, %24
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i32* @svn_cstring_split(i8*, i8*, i32, i32*) #1

declare dso_local i64 @svn_cstring_match_glob_list(i32, i32*) #1

declare dso_local i32 @apr_pstrdup(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
